@@ -56,6 +56,7 @@
 - Fix visualization for tool Point from arc and tangent.
 - Changing settings for move and rotate tools through property browser does not take in count previous change for label point and Show label option.
 - Fix locking file after double save as.
+- Key --ignoremargins still required margins.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
